--- a/openstack/oslo.service/oslo.service.spec.j2
+++ b/openstack/oslo.service/oslo.service.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'oslo.service' %}
-{% set upstream_version = upstream_version('1.31.3') %}
+{% set upstream_version = upstream_version('1.33.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 %if 0%{?rhel} || 0%{?fedora}
@@ -24,7 +24,6 @@ BuildRequires:  {{ py2pkg('eventlet', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('fixtures', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('greenlet', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('mock', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('monotonic', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslo.concurrency', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslo.config', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslo.i18n', py_versions=['py2', 'py3']) }}
@@ -40,8 +39,8 @@ Requires:       {{ py2pkg('PasteDeploy') }}
 Requires:       {{ py2pkg('Routes') }}
 Requires:       {{ py2pkg('WebOb') }}
 Requires:       {{ py2pkg('eventlet') }}
+Requires:       {{ py2pkg('fixtures') }}
 Requires:       {{ py2pkg('greenlet') }}
-Requires:       {{ py2pkg('monotonic') }}
 Requires:       {{ py2pkg('oslo.concurrency') }}
 Requires:       {{ py2pkg('oslo.config') }}
 Requires:       {{ py2pkg('oslo.i18n') }}
