python-neutronclient: Update to 6.11.0
Change-Id: Ibcc22ce971f3b7398ccefafc07dcfabd505abfaa

--- a/openstack/python-neutronclient/python-neutronclient.spec.j2
+++ b/openstack/python-neutronclient/python-neutronclient.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'python-neutronclient' %}
-{% set upstream_version = upstream_version('6.10.0') %}
+{% set upstream_version = upstream_version('6.11.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -33,7 +33,7 @@ BuildRequires:  {{ py2pkg('osprofiler', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('requests-mock', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('setuptools', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testscenarios', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testtools', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('Babel') }}
@@ -102,9 +102,7 @@ rm -r doc/build/html/.{doctrees,buildinfo}
 %python_uninstall_alternative neutron
 
 %check
-%{python_expand rm -rf .testrepository
-$python setup.py testr
-}
+%python_exec -m stestr.cli run
 
 %files %{python_files}
 %license LICENSE
