--- a/openstack/horizon/horizon.spec.j2
+++ b/openstack/horizon/horizon.spec.j2
@@ -53,10 +53,10 @@ BuildRequires:  {{ py2pkg('XStatic-term.js') }}
 BuildRequires:  {{ py2pkg('XStatic-tv4') }}
 BuildRequires:  {{ py2pkg('python-cinderclient') }}
 BuildRequires:  {{ py2pkg('devel') }}
+BuildRequires:  {{ py2pkg('django-debreach') }}
 BuildRequires:  {{ py2pkg('django-nose') }}
 BuildRequires:  {{ py2pkg('django-pyscss') }}
 BuildRequires:  {{ py2pkg('django_compressor') }}
-BuildRequires:  {{ py2pkg('django_debreach') }}
 BuildRequires:  {{ py2pkg('python-glanceclient') }}
 BuildRequires:  {{ py2pkg('python-heatclient') }}
 BuildRequires:  {{ py2pkg('python-keystoneclient') }}
@@ -150,9 +150,9 @@ Requires:       {{ py2pkg('XStatic-term.js') }}
 Requires:       {{ py2pkg('XStatic-tv4') }}
 Requires:       {{ py2pkg('python-cinderclient') }}
 Requires:       {{ py2pkg('django-babel') }}
+Requires:       {{ py2pkg('django-debreach') }}
 Requires:       {{ py2pkg('django-pyscss') }}
 Requires:       {{ py2pkg('django_compressor') }}
-Requires:       {{ py2pkg('django_debreach') }}
 Requires:       {{ py2pkg('futurist') }}
 Requires:       {{ py2pkg('python-glanceclient') }}
 Requires:       {{ py2pkg('python-heatclient') }}
