monasca-ceilometer: Fix name of dependency
The subunit package is actually called 'python-python-subunit'.

Change-Id: I97a40f13fd88b21a53d677f98dc83c5e3c48fb53

--- a/openstack/monasca-ceilometer/monasca-ceilometer.spec.j2
+++ b/openstack/monasca-ceilometer/monasca-ceilometer.spec.j2
@@ -246,9 +246,9 @@ Requires:       {{ py2pkg('os-testr') }}
 Requires:       {{ py2pkg('os-win') }}
 Requires:       {{ py2pkg('oslotest') }}
 Requires:       {{ py2pkg('psycopg2') }}
+Requires:       {{ py2pkg('python-subunit') }}
 Requires:       {{ py2pkg('sphinxcontrib-httpdomain') }}
 Requires:       {{ py2pkg('sphinxcontrib-pecanwsme') }}
-Requires:       {{ py2pkg('subunit') }}
 Requires:       {{ py2pkg('swiftclient') }}
 Requires:       {{ py2pkg('testrepository') }}
 Requires:       {{ py2pkg('testscenarios') }}
