Don't exclude python bytecode files in dashboards
If these files are excluded from the rpm install then modified bytecode
files will remamin on disk on uninstall and cause unexpected behavior in
horizon. Remove these from the exclude list.

Change-Id: Ib03f38285c3de377d4c71de4ed7feb1bfa919a35

--- a/openstack/freezer-web-ui/freezer-web-ui.spec.j2
+++ b/openstack/freezer-web-ui/freezer-web-ui.spec.j2
@@ -59,14 +59,12 @@ su %{apache_user} -s /bin/sh -c "python %{http_dashboard_dir}/manage.py collects
 %files
 %doc ChangeLog README.rst
 %license LICENSE
-%{http_dashboard_dir}/openstack_dashboard/enabled/*.py
+%{http_dashboard_dir}/openstack_dashboard/enabled/*.py*
 
 %files -n {{ py2pkg('horizon-plugin-freezer-ui') }}
 %doc README.rst
 %license LICENSE
 %{python2_sitelib}/disaster_recovery
 %{python2_sitelib}/freezer_web_ui-*.egg-info
-%exclude %{http_dashboard_dir}/openstack_dashboard/enabled/*.pyc
-%exclude %{http_dashboard_dir}/openstack_dashboard/enabled/*.pyo
 
 %changelog
