--- a/openstack/karbor-dashboard/karbor-dashboard.spec.j2
+++ b/openstack/karbor-dashboard/karbor-dashboard.spec.j2
@@ -66,14 +66,12 @@ su %{apache_user} -s /bin/sh -c "python %{http_dashboard_dir}/manage.py collects
 %files
 %doc ChangeLog CONTRIBUTING.rst README.rst
 %license LICENSE
-%{http_dashboard_dir}/openstack_dashboard/enabled/*.py
+%{http_dashboard_dir}/openstack_dashboard/enabled/*.py*
 
 %files -n {{ py2pkg('horizon-plugin-karbor-ui') }}
 %doc README.rst
 %license LICENSE
 %{python2_sitelib}/karbor_dashboard
 %{python2_sitelib}/karbor_dashboard-*.egg-info
-%exclude %{http_dashboard_dir}/openstack_dashboard/enabled/*.pyc
-%exclude %{http_dashboard_dir}/openstack_dashboard/enabled/*.pyo
 
 %changelog
