--- a/openstack/neutron-fwaas-dashboard/neutron-fwaas-dashboard.spec.j2
+++ b/openstack/neutron-fwaas-dashboard/neutron-fwaas-dashboard.spec.j2
@@ -98,7 +98,7 @@ su %{apache_user} -s /bin/sh -c "python %{http_dashboard_dir}/manage.py collects
 %files
 %doc ChangeLog CONTRIBUTING.rst README.rst
 %license LICENSE
-%{http_dashboard_dir}/openstack_dashboard/enabled/*.py
+%{http_dashboard_dir}/openstack_dashboard/enabled/*.py*
 %{http_dashboard_dir}/openstack_dashboard/conf/neutron-fwaas-policy.json
 
 %files -n {{ py2pkg('horizon-plugin-neutron-fwaas-ui') }}
@@ -106,8 +106,6 @@ su %{apache_user} -s /bin/sh -c "python %{http_dashboard_dir}/manage.py collects
 %license LICENSE
 %{python2_sitelib}/neutron_fwaas_dashboard/
 %{python2_sitelib}/neutron_fwaas_dashboard-*.egg-info
-%exclude %{http_dashboard_dir}/openstack_dashboard/enabled/*.pyc
-%exclude %{http_dashboard_dir}/openstack_dashboard/enabled/*.pyo
 %exclude %{python_sitelib}/neutron_fwaas_dashboard/test*
 
 %files test
