Fix XStatic dependencies
These XStatic-* packages are currently uninstallable because the python2
versions of the packages are depending python3 versions of XStatic. Fix
the runtime dependencies to be version agnostic.

Change-Id: I388935443f573e10f85d3ccdf0988cf70aa29522

--- a/openstack/XStatic-FileSaver/XStatic-FileSaver.spec.j2
+++ b/openstack/XStatic-FileSaver/XStatic-FileSaver.spec.j2
@@ -11,7 +11,7 @@ URL:            https://git.openstack.org/cgit/openstack/xstatic-{{ js_name | lo
 Source0:        https://files.pythonhosted.org/packages/source/X/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('setuptools', py_versions=build_py_versions) }}
-Requires:       {{ py2pkg('XStatic', py_versions=build_py_versions) }}
+Requires:       {{ py2pkg('XStatic') }}
 BuildArch:      noarch
 %python_subpackages
 
