macros: Ensure that py_req_cleanup is a multiline macro in impls
The suse and rdo macros used different semantics, so we need
to convert both to be multiline macros.

Change-Id: If6daf0345418cd383d74a9ffd41275dd3ec34bff

--- a/openstack/mox3/mox3.spec.j2
+++ b/openstack/mox3/mox3.spec.j2
@@ -47,13 +47,12 @@ This package contains documentation in HTML format.
 %prep
 %autosetup -p1 -n %{pypi_name}-%{version}
 %py_req_cleanup
-sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %python_build
 
 # generate html docs
-%{__python2} setup.py build_sphinx
+PBR_VERSION=%version PYTHONPATH=. sphinx-build -a -E -d doc/build/doctrees -b html doc/source doc/build/html
 
 %check
 %python_exec -m stestr.cli run
