neutron-lib: Only BuildRequire weakrefmethod for python2
It's not needed on python >=3.4

Change-Id: I70ab3d0c5d99b7aed6505c01f14c7640d0b196c8

--- a/openstack/neutron-lib/neutron-lib.spec.j2
+++ b/openstack/neutron-lib/neutron-lib.spec.j2
@@ -13,7 +13,6 @@ URL:            https://docs.openstack.org/developer/neutron-lib/
 Source0:        {{ source }}
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('weakrefmethod') }}
 BuildRequires:  {{ py2pkg('SQLAlchemy', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('debtcollector', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('fixtures', py_versions=['py2', 'py3']) }}
@@ -41,6 +40,7 @@ BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testresources', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testscenarios', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testtools', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('weakrefmethod', py_versions=['py2']) }}
 Requires:       {{ py2pkg('SQLAlchemy') }}
 Requires:       {{ py2pkg('keystoneauth1') }}
 Requires:       {{ py2pkg('os-traits') }}
