remove unnecessary PYTHONPATH setting
CWD was a typo (should have been PWD) and it seems it doesn't matter..

Change-Id: I52d4055662d62a26c2b66535004aa70d8d3baa38

--- a/openstack/oslo.config/oslo.config.spec.j2
+++ b/openstack/oslo.config/oslo.config.spec.j2
@@ -79,7 +79,7 @@ sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 %build
 %{python_build}
 
-PBR_VERSION={{ upstream_version }} PYTHONPATH=$CWD \
+PBR_VERSION={{ upstream_version }} PYTHONPATH=. \
     sphinx-build -b html doc/source doc/build/html
 # remove the sphinx-build leftovers
 rm -rf doc/build/html/.{doctrees,buildinfo}
