Fix monasca-notification tests
monasca-notification changed one of its tests[1] to require the jira
plugin which we don't have, so skip it.

[1] https://review.openstack.org/435136

Change-Id: I6f9270522f60d368f7130e64719511687638bc59

--- a/openstack/monasca-notification/monasca-notification.spec.j2
+++ b/openstack/monasca-notification/monasca-notification.spec.j2
@@ -117,8 +117,8 @@ find . -type f -name *.pyc -delete
 # we dont have the jira module currently
 rm tests/test_jira_notification.py
 export PYTHONPATH=.
-# test_overriding needs jira
-ostestr --black-regex '^tests.test_config.TestYamlOverriding.test_overriding'
+# test_overriding and test_enabled_notifications needs jira
+ostestr --black-regex '^(tests.test_config.TestYamlOverriding.test_overriding|tests.test_notifiers.TestInterface.test_enabled_notifications)'
 
 %pre
 # create monasca group and monasca-notification user
